# LivePlot

./: LICENSE  README.md
doc/: compile.md
examples/: liveplot_rtp.py  matplotlib_rtp.py
live-plotter/: index.html  package-lock.json  package.json
live-plotter/src/: App.tsx  AvailableQuantities.tsx  ConnectionControl.tsx  ConnectionHistory.tsx  DataPlot.tsx  SubscriptionsTable.tsx  availableQuantitiesStore.ts  connectionHistoryStore.ts  historyStore.ts  main.tsx  store.ts
live-plotter/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
live-plotter/src-tauri/capabilities/: migrated.json
live-plotter/src-tauri/icons/: icon.icns
live-plotter/src-tauri/src/: main.rs
lp-cpp/: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  conanfile.txt  vcpkg.json
lp-cpp/cmd/: CMakeLists.txt
lp-cpp/cmd/example/: CMakeLists.txt
lp-cpp/cmd/example/src/: main.cpp
lp-cpp/cmd/example_nolp/: CMakeLists.txt
lp-cpp/cmd/example_nolp/src/: main.cpp
lp-cpp/cmd/testSink/: CMakeLists.txt
lp-cpp/cmd/testSink/src/: main.cpp
lp-cpp/lib/: CMakeLists.txt
lp-cpp/lib/liveplot/: CMakeLists.txt
lp-cpp/lib/liveplot-sub/: CMakeLists.txt
lp-cpp/lib/liveplot-sub/include/: LivePlotSubscription.cpp  LivePlotSubscription.h  liveplot-sub.h
lp-cpp/lib/liveplot-sub/src/: LivePlotSubscription.cpp  LivePlotSubscription.h  liveplot-sub.cpp
lp-cpp/lib/liveplot/include/: liveplot.h
lp-cpp/lib/liveplot/src/: liveplot-noop.cpp  liveplot.cpp  pyliveplot.cpp
lp-cpp/logging/: CMakeLists.txt
lp-cpp/logging/include/: logger.h
lp-cpp/logging/src/: logger.cpp
lp-cpp/tests/: CMakeLists.txt  logger_test.cpp
