[package]
name = "live-plotter"
version = "0.1.0"
description = "A Tauri App"
authors = ["Harald Held <harald.held@gmail.com>"]
license = "MIT"
repository = "https://github.com/hheld/LivePlot"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
panic = "abort"
lto = true

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
cmake = "0.1.49"
conan = "0.3.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-confirm", "dialog-message", "dialog-save"] }
regex = "1.7.1"
base64 = "0.21.0"
polars = { version = "0.27.2", features = ["diagonal_concat"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
